[workspace]
resolver = "2"
members = ["fault-cli", "fault-ebpf-programs"]
default-members = ["fault-cli"]

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
license-file = "LICENSE"
repository = "https://github.com/rebound-how/rebound" 
documentation = "https://fault-project.com" 
homepage = "https://fault-project.com"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
]

[workspace.dependencies]
which = { version = "7.0.3", default-features = false }
anyhow = { version = "1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.fault-ebpf-programs]
codegen-units = 1
debug = 2
