[workspace]
resolver = "2"
members = ["lueur-cli", "lueur-ebpf-programs"]
default-members = ["lueur-cli"]

[workspace.dependencies]
which = { version = "7.0.0", default-features = false }
anyhow = { version = "1", default-features = false }

[profile.release.package.lueur-ebpf-programs]
debug = 2
codegen-units = 1
