[workspace]
resolver = "2"
members = ["lueur-cli", "lueur-ebpf-programs"]
default-members = ["lueur-cli"]

[workspace.dependencies]
which = { version = "7.0.0", default-features = false }
anyhow = { version = "1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.lueur-ebpf-programs]
codegen-units = 1
debug = 2
