[project]
name = "fault-cli-doc"
dynamic = ["version"]
description = "fault documentation"
authors = [
    {name = "Sylvain Hellegouarch", email = "sylvain@rebound.how"},
]
dependencies = ["mkdocs>=1.6.1", "mkdocs-material[imaging]>=9.5.49", "termynal>=0.12.2", "mkdocs-git-revision-date-localized-plugin>=1.4.1", "mkdocs-glightbox>=0.4.0", "mkdocs-simple-hooks>=0.1.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
distribution = false
version = { source = "scm" }

[tool.pdm.scripts]
deploy-docs = {cmd = "mkdocs gh-deploy --force"}
