[project]
name = "reliablydoc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sylvain Hellegouarch", email = "sylvain@rebound.how"},
]
dependencies = ["mkdocs>=1.6.1", "mkdocs-material[imaging]>=9.6.9", "termynal>=0.13.0", "mkdocs-git-revision-date-localized-plugin>=1.4.5", "mkdocs-glightbox>=0.4.0", "mkdocs-simple-hooks>=0.1.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false
