[package]
name = "fault-ebpf-programs"
authors = ["Sylvain Hellegouarch <sylvain@rebound.how>"]
description = "eBPF programs for the fault CLI" 
keywords = ["fault", "ebpf"]
readme = "README.md"
repository.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.1"
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "fault-ebpf"
path = "src/main.rs"
