[package]
name = "lueur-cli"
authors = ["Sylvain Hellegouarch <sylvain@lueur.dev>"]
description = "Lueur CLI" 
keywords = ["lueur", "ebpf"]
readme = "README.md"
repository.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]


[dependencies]
axum = { version = "0.8", features = ["http2", "json", "macros"] }
tokio = { version = "1.44", features = ["full", "tracing", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
tower = { version = "0.5.2", features = ["full", "make", "util"] }
hyper = { version = "1.6", features = ["client", "server", "full"] }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5.32", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "=0.3.19", features = ["fmt", "env-filter"] }
prost = "0.13"
prost-types = "0.13"
futures = "0.3"
rand = "0.9"
tokio-stream = "0.1"
rand_distr = "0.5"
bytes = "1.10.1"
once_cell = "1.21.0"
async-trait = "0.1.87"
serde_yaml = "0.9.34"
url = "2.5.4"
oneshot = "0.1.11"
tracing-appender = "0.2.3"
hickory-resolver = "0.25"
chrono = { version = "0.4.40", features = ["serde"] }
libc = "0.2.171"
tracing-log = "0.2.0"
pnet_datalink = "0.35.0"
reqwest = { version = "0.12.14", features = ["stream", "json"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
hyper-util = "0.1.10"
pin-project = "1.1.10"
async-std-resolver = "0.24.4"
local-ip-address = "0.6.3"
get_if_addrs = "0.5.3"
tower-http = { version = "0.6.2", features = ["compression-gzip", "decompression-gzip", "trace"] }
colorful = "0.3.2"
walkdir = "2.5.0"
async-stream = "0.3.6"
dashmap = "6.1.0"
prettytable = "0.10.0"
tera = "1.20.0"
governor = "0.9"
opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.29"
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
tracing-opentelemetry = "0.30"
axum-tracing-opentelemetry = "0.26"
tracing = { version = "0.1.41", features = ["attributes"] }
openssl = { version = "0.10.71", features = ["vendored"] }
log = "0.4.26"
env_logger = "0.11.7"
parse_duration = "2.1.1"
chrono-humanize = "0.2.3"
indicatif = { version = "0.17.11", features = ["tokio", "improved_unicode"] }
tokio-rustls = "0.26.2"
webpki-roots = "0.26.8"
rustls-pki-types = "1.11.0"
rustls-native-certs = "0.8.1"
rustls-platform-verifier = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya-ebpf = { version = "0.1.1", optional = true }
aya-log-ebpf = { version = "0.1.1", optional = true }
aya = { version = "0.13.1", optional = true }
aya-log = { version = "0.2.1", optional = true }
nix = { version = "0.29.0", features = ["net"], optional = true }
lueur-ebpf-programs = { version = "0.1.41", optional = true }

[build-dependencies]
anyhow = { workspace = true }
which = { workspace = true }
tonic-build = "0.12"

[target.'cfg(target_os = "linux")'.build-dependencies]
aya-build = "0.1.2"

#[target.'cfg(all(target_os = "linux", feature = "stealth-auto-build"))'.build-dependencies]
#lueur-ebpf-programs = { path = "../lueur-ebpf-programs" }

[[bin]]
name = "lueur"
path = "src/main.rs"

[features]
default = [
    "stealth"
]
stealth = [
    "aya-ebpf",
    "aya-log-ebpf",
    "aya",
    "aya-log",
    "nix",
    "lueur-ebpf-programs"
]
stealth-auto-build = [
    "aya-ebpf",
    "aya-log-ebpf",
    "aya",
    "aya-log",
    "nix",
]
