[project]
name = "reliably-app"
description = "Reliably - Resilience and Chaos Engineering Platform"
dynamic = ["version"]
authors = [
    { name = "Sylvain Hellegouarch", email = "sylvain@reliably.com" },
]
requires-python = ">=3.12"
readme = "docs/README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.1.1",
    "authlib>=1.2.1",
    "httpx[http2]>=0.24.1",
    "anyio>=3.7.1",
    "itsdangerous>=2.1.2",
    "asyncpg>=0.28.0",
    "sqlalchemy[asyncio]>=1.4.49",
    "fastapi>=0.100.1",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.40b0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
    "opentelemetry-instrumentation-logging>=0.40b0",
    "opentelemetry-instrumentation-asyncpg>=0.40b0",
    "opentelemetry-exporter-otlp-proto-http>=1.19.0",
    "opentelemetry-propagator-b3>=1.19.0",
    "opentelemetry-semantic-conventions>=0.40b0",
    "python-json-logger>=2.0.7",
    "cryptography>=41.0.2",
    "ruamel-yaml>=0.17.32",
    "greenlet>=2.0.2",
    "orjson>=3.9.2",
    "uvicorn>=0.23.2",
    "httptools>=0.6.0",
    "uvloop>=0.17.0",
    "typer>=0.9.0",
    "argon2-cffi>=21.3.0",
    "docker>=6.1.3",
    "croniter>=1.4.1",
    "cron-validator>=1.0.8",
    "kubernetes>=32.0.1",
    "pydantic-settings>=2.0.2",
    "pytz>=2023.3",
    "certifi>=2023.7.22",
    "magentic>=0.11.1",
    "lueur>=0.1.0",
    "python-jsonpath>=1.1.1",
    "msgspec>=0.19.0",
    "tenacity>=9.0.0",
    "Secweb>=1.18.1",
    "instructor>=1.7.2",
    "alembic>=1.9.0",
    "rich>=13.4.2",
    "platformdirs>=4.3.6",
    "tzlocal>=5.2",
    "boto3>=1.36.18",
]

[project.urls]
Homepage = "https://reliably.com/"
Documentation = "https://reliably.com/docs/"
Source = "https://github.com/rebound-how/reliably"

[project.optional-dependencies]
gcp = [
    "google-crc32c>=1.5.0",
    "opentelemetry-exporter-gcp-trace>=1.4.0",
    "opentelemetry-resourcedetector-gcp>=1.4.0a0",
    "opentelemetry-propagator-gcp>=1.4.0",
    "google-cloud-kms>=2.13.0",
    "google-auth>=2.30.0",
    "grpcio>=1.70.0",
]
full = [
    "chaostoolkit>=1.19.0",
    "chaostoolkit-lib>=1.44.0",
    "chaostoolkit-aws>=0.35.1",
    "chaostoolkit-kubernetes>=0.39.0",
    "chaostoolkit-opentracing>=0.17.0",
    "chaostoolkit-wiremock>=0.1.2",
    "chaostoolkit-gandi>=0.2.0",
    "chaostoolkit-dynatrace>=0.2.0",
    "chaostoolkit-reliably>=0.79.0",
    "chaostoolkit-addons>=0.11.0",
    "chaostoolkit-grafana>=0.2.0",
    "chaostoolkit-slack>=0.10.0",
    "aws-az-failure-chaostoolkit>=0.1.10",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-opentracing-shim>=0.51b0",
    "opentelemetry-propagator-b3>=1.30.0",
    "opentelemetry-semantic-conventions>=0.51b0",
    "opentelemetry-exporter-gcp-trace>=1.9.0",
    "opentelemetry-resourcedetector-gcp>=1.9.0a0",
    "opentelemetry-propagator-gcp>=1.9.0",
    "httpx[http2]>=0.28.1",
    "jsonpath2>=0.4.5",
    "reliably-cli>=0.28.1",
    "chaostoolkit-honeycomb>=0.6.2",
    "awscli>=1.37.26",
    "chaostoolkit-google-cloud-platform>=0.37.0",
    "slack-sdk>=3.34.0",
]

[project.scripts]
reliably-server = "reliably_app.cli:cli"

[tool.ruff]
line-length = 80
target-version = "py312"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_default_fixture_loop_scope = "function"

testpaths = [
    "tests",
]
norecursedirs = ".ruff_cache .pdm-build .mypy_cache dist build .venv scripts docs"
addopts = "-v -rxs --cov reliably_app --junit-xml=pytest.xml --cov-config=.coveragerc --cov-report=xml:coverage.xml --cov-report=term-missing:skip-covered -p no:warnings"

[tool.pdm]
distribution = true
version = { source = "scm" }

[tool.pdm.build]
source-includes = [
    "docs/README.md",
]
excludes = ["tests/", "scripts/"]

[tool.pdm.build.wheel-data]
data = [
    {path = "docs/README.md", relative-to = "."},
]

[tool.pdm.scripts.lint]
composite = [
    "ruff check reliably_app/",
    "mypy reliably_app/",
]

[tool.pdm.scripts.format]
composite = [
    "ruff format reliably_app/",
]

[tool.pdm.scripts.sec]
cmd = "bandit -r reliably_app"

[tool.pdm.scripts.clean]
cmd = "pyclean reliably_app"

[tool.pdm.scripts.test]
cmd = "pytest"

[tool.pdm.scripts.deptree]
cmd = "deptry ."

[tool.deptry]
extend_exclude = [
    "migrations",
    "tests",
]
[tool.deptry.per_rule_ignores]
DEP001 = [
    "google",
    "Secweb",
]
DEP002 = [
    "alembic",
    "anyio",
    "itsdangerous",
    "asyncpg",
    "google-cloud-kms",
    "psycopg2-binary",
    "greenlet",
    "uvicorn",
    "httptools",
    "uvloop",
    "opentelemetry-exporter-gcp-trace",
    "opentelemetry-resourcedetector-gcp",
    "opentelemetry-propagator-gcp",
    "pyclean",
    "twine",
    "keyring",
    "keyrings-google-artifactregistry-auth",
    "Secweb",
    "aiohttp",
    "python-jsonpath",
]
DEP003 = [
    "starlette",
]
DEP004 = ["google_crc32c", "google"]


[tool.deptry.package_module_name_map]
ruamel = "ruamel"

[tool.mypy]
files = ["reliably_app"]
plugins = "pydantic.mypy"
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
namespace_packages = true

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "asgi-lifespan==2.*",
    "bandit>=1.7.4",
    "ruff>=0.0.189",
    "mypy>=0.991",
    "alembic>=1.9.1",
    "types-ujson>=5.7.0.0",
    "sqlalchemy[mypy]>=1.4.46,<2",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.4",
    "respx>=0.20.1",
    "pytest-sugar>=0.9.6",
    "types-tabulate>=0.9.0.0",
    "trustme>=1.1.0",
    "faker>=15.3.4",
    "pytest-alembic>=0.9.1",
    "ujson>=5.7.0",
    "deptry>=0.10.1",
    "types-croniter>=1.3.2.9",
    "pytest-profiling>=1.7.0",
    "types-pytz>=2023.3.0.0",
    "black>=22.12.0",
    "isort>=5.11.3",
    "bandit>=1.7.4",
    "ruff>=0.0.189",
    "mypy>=0.991",
    "types-ujson>=5.7.0.0",
    "sqlalchemy[mypy]>=1.4.46,<2",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.4",
    "respx>=0.20.1",
    "pytest-sugar>=0.9.6",
    "types-tabulate>=0.9.0.0",
    "trustme>=1.1.0",
    "faker>=15.3.4",
    "pytest-asyncio==0.21.1",
    "psycopg2-binary>=2.9.10",
]
cleaner = [
    "pyclean>=2.7.2",
]
